<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvFrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frase"/>

    <Button
        android:id="@+id/btnA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_a"/>

    <Button
        android:id="@+id/btnB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_b"/>

</LinearLayout>